// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Newsletter Puff renders 'saving' when the button is clicked 1`] = `
<div
  className="styles__View-rq66zl-0 styles__InpContainer-rq66zl-2 Jamkw"
>
  <div
    className="styles__View-rq66zl-0 styles__InpImageContainer-rq66zl-3 fNmxob"
  >
    Image rendered with imageUri=https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg
  </div>
  <div
    className="styles__View-rq66zl-0 styles__InpSignupContainer-rq66zl-6 fYKGPl"
  >
    <div
      className="styles__Text-rq66zl-1 styles__InpSignupLabel-rq66zl-7 daGLMh"
    >
      STRAIGHT IN YOUR INBOX
    </div>
    <div
      className="styles__Text-rq66zl-1 styles__InpSignupHeadline-rq66zl-8 fKlbOP"
    >
      Politics. Explained.
    </div>
    <div
      className="styles__Text-rq66zl-1 styles__InpCopy-rq66zl-9 eDMFvk"
    >
      Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
    </div>
    <div
      className="styles__View-rq66zl-0 styles__InpSignupCTAContainer-rq66zl-10 kRPOnY"
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#1D1D1B",
            "borderRadius": 2,
            "borderStyle": "solid",
            "borderWidth": 2,
            "color": "#1D1D1B",
            "cursor": "pointer",
            "elevation": 0,
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 16,
            "height": 45,
            "justifyContent": "center",
            "letterSpacing": 0.2,
            "lineHeight": 0,
            "minWidth": 100,
            "paddingTop": 4,
            "width": "100%",
          }
        }
        type="button"
      >
        Saving…
      </button>
    </div>
  </div>
</div>
`;

exports[`Inline Newsletter Puff renders null when is already subscribed 1`] = `null`;

exports[`Inline Newsletter Puff renders placeholder when loading 1`] = `
<div
  className="styles__View-rq66zl-0 styles__InpContainer-rq66zl-2 Jamkw"
  style={
    Object {
      "height": 257,
    }
  }
>
  Placeholder rendered
</div>
`;

exports[`Inline Newsletter Puff renders signup state 1`] = `
<div
  className="styles__View-rq66zl-0 styles__InpContainer-rq66zl-2 Jamkw"
>
  <div
    className="styles__View-rq66zl-0 styles__InpImageContainer-rq66zl-3 fNmxob"
  >
    Image rendered with imageUri=https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg
  </div>
  <div
    className="styles__View-rq66zl-0 styles__InpSignupContainer-rq66zl-6 fYKGPl"
  >
    <div
      className="styles__Text-rq66zl-1 styles__InpSignupLabel-rq66zl-7 daGLMh"
    >
      STRAIGHT IN YOUR INBOX
    </div>
    <div
      className="styles__Text-rq66zl-1 styles__InpSignupHeadline-rq66zl-8 fKlbOP"
    >
      Politics. Explained.
    </div>
    <div
      className="styles__Text-rq66zl-1 styles__InpCopy-rq66zl-9 eDMFvk"
    >
      Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
    </div>
    <div
      className="styles__View-rq66zl-0 styles__InpSignupCTAContainer-rq66zl-10 kRPOnY"
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#1D1D1B",
            "borderRadius": 2,
            "borderStyle": "solid",
            "borderWidth": 2,
            "color": "#1D1D1B",
            "cursor": "pointer",
            "elevation": 0,
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 16,
            "height": 45,
            "justifyContent": "center",
            "letterSpacing": 0.2,
            "lineHeight": 0,
            "minWidth": 100,
            "paddingTop": 4,
            "width": "100%",
          }
        }
        type="button"
      >
        Sign up now
      </button>
    </div>
  </div>
</div>
`;

exports[`Inline Newsletter Puff renders signup view when not already subscribed 1`] = `
<div
  className="styles__View-rq66zl-0 styles__InpContainer-rq66zl-2 Jamkw"
>
  <div
    className="styles__View-rq66zl-0 styles__InpImageContainer-rq66zl-3 fNmxob"
  >
    Image rendered with imageUri=https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg
  </div>
  <div
    className="styles__View-rq66zl-0 styles__InpSignupContainer-rq66zl-6 fYKGPl"
  >
    <div
      className="styles__Text-rq66zl-1 styles__InpSignupLabel-rq66zl-7 daGLMh"
    >
      STRAIGHT IN YOUR INBOX
    </div>
    <div
      className="styles__Text-rq66zl-1 styles__InpSignupHeadline-rq66zl-8 fKlbOP"
    >
      Politics. Explained.
    </div>
    <div
      className="styles__Text-rq66zl-1 styles__InpCopy-rq66zl-9 eDMFvk"
    >
      Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
    </div>
    <div
      className="styles__View-rq66zl-0 styles__InpSignupCTAContainer-rq66zl-10 kRPOnY"
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#1D1D1B",
            "borderRadius": 2,
            "borderStyle": "solid",
            "borderWidth": 2,
            "color": "#1D1D1B",
            "cursor": "pointer",
            "elevation": 0,
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 16,
            "height": 45,
            "justifyContent": "center",
            "letterSpacing": 0.2,
            "lineHeight": 0,
            "minWidth": 100,
            "paddingTop": 4,
            "width": "100%",
          }
        }
        type="button"
      >
        Sign up now
      </button>
    </div>
  </div>
</div>
`;

exports[`Inline Newsletter Puff renders the success view after subscribing  1`] = `
<div
  className="styles__View-rq66zl-0 styles__InpContainer-rq66zl-2 Jamkw"
>
  <div
    className="styles__View-rq66zl-0 styles__InpImageContainer-rq66zl-3 fNmxob"
  >
    Image rendered with imageUri=https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/2aa9050e6c3d4de682f11a4802ebba96.jpg
  </div>
  <div
    className="styles__View-rq66zl-0 styles__InpSubscribedContainer-rq66zl-4 fkcWFB"
  >
    <div
      className="styles__Text-rq66zl-1 styles__InpSubscribedHeadline-rq66zl-5 bjBdIp"
    >
      You’ve successfully signed up to RED BOX
    </div>
    <div
      className="styles__View-rq66zl-0 styles__InpPreferencesContainer-rq66zl-11 fHgfCt"
    >
      <a
        className="linkweb__RespLink-yfb9n-0 cCCShB"
        href="https://home.thetimes.co.uk/myNews"
        onClick={[Function]}
        target={null}
      >
        <div
          className="styles__View-rq66zl-0 styles__InpPreferencesView-rq66zl-14 lpoLan"
        >
          <div
            className="styles__Text-rq66zl-1 styles__InpPreferencesText-rq66zl-12 fjvjTh"
          >
            Manage preferences here
          </div>
          <div
            className="styles__View-rq66zl-0 styles__InpIconContainer-rq66zl-13 mCYKT"
          >
            <svg
              aria-label="icon-forward-arrow"
              height={12}
              style={Object {}}
              viewBox="42 12 60 120"
              width={7}
            >
              <g
                fill="#006699"
                style={Object {}}
              >
                <path
                  d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
                  style={Object {}}
                />
              </g>
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
